--- a/global-css/hub.css
+++ b/global-css/hub.css
@@ -1,9 +1,22 @@
+.body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0px;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 .page-container {
     margin: 0px;
     color: white;
     padding-top: 150px;
     height: calc(100vh - 150px);
-    background-image: url('background.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -17,3 +30,30 @@
     padding: 16px;
 }
 
+/* unvisited link */
+a:link {
+  color: #ff9955;
+}
+
+/* visited link */
+a:visited {
+  color: #ff9955;
+}
+
+/* mouse over link */
+a:hover {
+  color: #ff9955;
+}
+
+/* selected link */
+a:active {
+  color: #0000EE;
+}
+
+h5 {
+  margin: 10px 0px
+}
+
+h6 {
+  margin-left: 20px
+}
