--- a/global-css/hub.css
+++ b/global-css/hub.css
@@ -1,10 +1,10 @@
-.body {
+body {
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0px;
 }
 
 code {
@@ -16,18 +16,32 @@ code {
     margin: 0px;
     color: white;
     padding-top: 150px;
-    height: calc(100vh - 150px);
+    min-height: calc(100vh - 150px);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
 }
 
-.content-container{
+.content-container {
     margin: auto;
     background-color: rgba(0,0,0,.7);
     max-width:50em;
     top: 150px;
     padding: 16px;
+}
+
+.email {
+    color: #ff9955
+}
+
+.border {
+    border-width: 0.05px;
+    border-color: white;
+    margin-top: 15px;
+}
+
+.title {
+    text-align: center;
 }
 
 /* unvisited link */
