--- a/global-css/writing.css
+++ b/global-css/writing.css
@@ -1,8 +1,8 @@
 body {
     margin: 0px;
-    padding-top: 7%;
     padding-right: 20%;
     padding-left: 20%;
+    background-color: black;
 }
 
 br {
@@ -14,4 +14,39 @@ br {
 .container {
     max-width: 50em;
     margin: auto;
+    padding: 5em;
+    background-color: white;
+}
+
+.header {
+    text-align: center;
+}
+
+.title {
+
+}
+
+.subtitle {
+
+}
+
+/* unvisited link */
+a:link {
+  color: #ff9955;
+}
+/* visited link */
+a:visited {
+  color: #ff9955;
+}
+/* mouse over link */
+a:hover {
+  color: #0000EE;
+}
+/* selected link */
+a:active {
+  color: #0000EE;
+}
+
+ul {
+    list-style: none;
 }
